# lyrebird-mini-tech

./: .env.docker.example  .env.example  .gitignore  Makefile  README.md  alembic.ini  backend.Dockerfile  db-init.Dockerfile  docker-compose-local.yaml  docker-compose.yaml  frontend.Dockerfile  pyproject.toml  pytest.ini  test.mpga
alembic/: env.py
alembic/versions/: 002dde892baa_init.py  76df714ef894_add_column_original_to_usereditsmodel.py  af6d67213e8f_remove_columns.py
api/: auth.py  config.py  database.py  dictations.py  main.py  models.py  run_tests.py  schemas.py
api/core/: config.py  database.py  exceptions.py  logging.py  security.py
api/core/llm/: sync_prompt.py
api/db/sql_dump/: alembic_version.sql  dictations.sql  user_edits.sql  user_preferences.sql  users.sql
api/llm/: sync_prompt.py
api/llm/prompts/: create-memory.md  format-transcript.md
api/services/: audio_service.py  llm_service.py
api/src/: __init__.py
api/src/dictations/: models.py  repository.py  routes.py  schemas.py  service.py
api/src/users/: models.py  repository.py  routes.py  schemas.py  service.py
api/tests/: README.md  conftest.py  pytest.ini  test_auth.py  test_dictations.py  test_edge_cases.py  test_health.py  test_integration.py  test_services.py
api/utils/: exceptions.py  logging.py  migrations.py  security.py
frontend/: api_client.py  config.py  error_handler.py  lyrebird_app.py  session_manager.py  ui_components.py
